# baisilisp

./: .gitmodules  CHANGELOG.md  README.md  conftest.py  pyproject.toml  tox.ini
.github/workflows/: pypi-release.yml  run-clojure-test-suite.yml  run-tests.yml
docs/: cli.rst  compiler.rst  concepts.rst  concurrency.rst  conf.py  contributing.rst  core-parity-matrix.csv  core-parity-needs-review.md  differencesfromclojure.rst  features.rst  gettingstarted.rst  index.rst  parityarchitecture.rst  paritydecisions.rst  parityroadmap.rst  pyinterop.rst  reader.rst  repl.rst  testing.rst
docs/api/: core-rrb-vector.rst  data-xml-tree.rst  data-xml.rst  data.rst  datafy.rst  instant.rst  math.rst  pprint.rst  process.rst  reducers.rst  spec-alpha.rst  stm.rst  tools-namespace.rst  tools-reader.rst  xml.rst  zip.rst
docs/api/contrib/: attrs.rst  dataclasses.rst  prepl.rst
docs/api/core/: server.rst
docs/api/data/: csv.rst  json.rst
docs/api/data/codec/: base64.rst
docs/api/java/: io.rst  process.rst
docs/api/spec/test/: alpha.rst
docs/api/test/: tap.rst
rust/: Cargo.toml
rust/src/basilisp_native/: seq.rs
scripts/: clojure_test_suite_residuals.py  core_parity_matrix.py  differential_conformance.py  library_acceptance.py  package_probe.py  portability_manifest.py  set_distribution_version.py  standard_namespace_inventory.py  standard_namespace_surface_matrix.py  stm_contention_probe.py
src/basilisp/: cli.py  concurrent.lpy  concurrent_channel.py  core.lpy  core_cache.py  core_interop.py  core_memoize.py  core_protocols.py  csv.lpy  data.lpy  data_codec_base64.py  data_json.py  data_xml.py  datafy.lpy  edn.lpy  importer.py  instant.lpy  io.lpy  math.lpy  portability.py  pprint.lpy  process.lpy  project.py  reducers.lpy  repl.lpy  set.lpy  stacktrace.lpy  stm.lpy  string.lpy  test.lpy  tools_logging.py  tools_namespace.py  tools_reader.py  uuid.lpy  walk.lpy  xml.lpy  zip.lpy
src/basilisp/_lang/: seq.pyi
src/basilisp/algo/: monads.lpy
src/basilisp/contrib/: attrs.lpy  core_server.py  dataclasses.lpy  nrepl_server.lpy  prepl.lpy  prepl_server.py  repl_session.py
src/basilisp/contrib/pytest/: testrunner.py
src/basilisp/core/: cache.lpy  memoize.lpy  protocols.lpy  reducers.lpy  rrb_vector.lpy  server.lpy
src/basilisp/core/cache/: wrapped.lpy
src/basilisp/core/specs/: alpha.lpy
src/basilisp/data/: csv.lpy  json.lpy  priority_map.lpy  xml.lpy
src/basilisp/data/codec/: base64.lpy
src/basilisp/data/xml/: event.lpy  tree.lpy
src/basilisp/java/: io.lpy  process.lpy  shell.lpy
src/basilisp/lang/: agent.py  attrs.py  character.py  chunk.py  dataclass.py  diagnostics.py  equality.py  exception.py  futures.py  hashing.py  instant.py  interfaces.py  list.py  map.py  multifn.py  numbers.py  numeric_coerce.py  obj.py  primitive_array.py  priority_map.py  queue.py  range.py  reader.py  regex.py  runtime.py  seq.py  set.py  spec.py  stm.py  typing.py  util.py  vector.py
src/basilisp/lang/compiler/: __init__.py  analyzer.py  constants.py  generator.py  nodes.py
src/basilisp/math/: combinatorics.lpy
src/basilisp/spec/: __init__.py  alpha.lpy
src/basilisp/spec/test/: alpha.lpy
src/basilisp/test/: __init__.py  check.lpy  tap.lpy
src/basilisp/test/check/: __init__.py  _impl.py  clojure_test.lpy  generators.lpy  properties.lpy  random.lpy  (+2 more)
src/basilisp/tools/: __init__.py  cli.lpy  logging.lpy  macro.lpy  namespace.lpy  reader.lpy
src/medley/: core.lpy
tests/: clojure_test_suite_residuals_test.py  core_parity_matrix_test.py  differential_conformance_test.py  library_acceptance_test.py  standard_namespace_inventory_test.py  standard_namespace_surface_matrix_test.py
tests/acceptance/portable_library/: portability-manifest.json  run.cljc
tests/basilisp/: agent_context_test.py  agent_test.py  algo_monads_test.lpy  attrs_test.py  character_test.py  chunk_test.py  cli_test.py  clojure_test_surface_test.py  compiler_test.py  concurrent_channel_test.py  core_cache_py_test.py  core_cache_test.lpy  core_interop_py_test.py  core_interop_test.lpy  core_memoize_py_test.py  core_memoize_test.lpy  core_protocols_test.lpy  core_rrb_vector_test.lpy  core_test.py  data_codec_base64_py_test.py  data_codec_base64_test.lpy  data_json_py_test.py  data_json_test.lpy  data_priority_map_py_test.py  data_priority_map_test.lpy  data_xml_event_test.py  data_xml_test.lpy  dataclass_test.py  decimal_math_test.py  definline_test.py  diagnostics_test.py  ex_info_cause_test.py  hashing_test.py  importer_test.py  instant_test.py  java_namespace_aliases_test.py  lrepr_test.py  map_test.py  math_combinatorics_test.py  math_context_test.py  (+85 more)
tests/basilisp/contrib/: nrepl_server_test.lpy
tests/basilisp/core/: test_agents.lpy  test_arithmetic.lpy  test_arrays.lpy  test_character_fns.lpy  test_collection_fns.lpy  test_core_fns.lpy  test_core_macros.lpy  test_defrecord.lpy  test_higher_order_fns.lpy  test_insts.lpy  test_multifn.lpy  test_namespace_fns.lpy  test_num.py  test_printing_fns.lpy  test_promoting_arithmetic.py  test_protocols.lpy  test_proxies.lpy  test_regex_fns.lpy  test_sequence_fns.lpy  test_server.lpy  test_sorted_into.lpy  test_stream_fns.lpy  test_taps.lpy
tests/conformance/: agent_context_cases.cljc  base64_cases.cljc  case_cases.cljc  character_cases.cljc  chunk_cases.cljc  compile_vars_cases.cljc  concurrency_cases.cljc  core_cache_cases.cljc  core_cases.cljc  core_memoize_cases.cljc  core_protocols_cases.cljc  core_public_surface_cases.cljc  core_specs_uuid_cases.cljc  csv_cases.cljc  data_cases.cljc  datafy_cases.cljc  definline_cases.cljc  edge_cases.cljc  edn_cases.cljc  exception_cause_cases.cljc  file_var_cases.cljc  hash_cases.cljc  instant_cases.cljc  java_io_cases.cljc  json_cases.cljc  legacy_metadata_cases.cljc  loop_closure_cases.cljc  math_cases.cljc  math_context_cases.cljc  merge_cases.cljc  namespace_alias_cases.cljc  namespace_prefix_cases.cljc  numeric_coercion_cases.cljc  numeric_equality_cases.cljc  pprint_cases.cljc  prepl_cases.cljc  primitive_array_cases.cljc  print_helpers_cases.cljc  print_writer_cases.cljc  priority_map_cases.cljc  (+43 more)
(+38 files in other folders)
