[package]
name = "basilisp-native"
version = "0.5.2"
edition = "2021"

[lib]
name = "basilisp_native"
crate-type = ["cdylib"]


[dependencies]
parking_lot = "0.12.5"

[dependencies.pyo3]
version = "0.28.3"
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
features = ["abi3-py310", "experimental-inspect"]
